2002-07-30  Jeff Freedman  <jsf@usf-cf-x86-linux-1>

	* gamemap.cc,spellbook.{cc,h}:  Save/restore bookmarked spell.
	* shapes/vgafile.cc:  Update image when offsets are changed.

2002-07-29  Jeff Freedman  <jeff@amy.nerble.net>

	* tqueue.cc,gamewin.cc,Gump_manager.cc:  Pause time queue (with
	Text_effects as an exception) whenever gumps are open.

2002-07-28  Jeff Freedman  <jeff@amy.nerble.net>

	* effects.cc,gamerend.cc:  Text_effects are in a separate list.
	* gamerend.cc:  Show sprites below gumps, text over them.

2002-07-28  Ryan Nunn  <triforce@merlin.net.au>
	* pathfinder/path.cc : Fixed seriously broken non hash pathfinding (z 
	  coord was being ignored in comparisons of nodes). This fixes the
	  Monitor Training problem. Probably fixes countless other pathfinding
	  problems too.

2002-07-27  Max Horn  <max@quendi.de>

	* audio/Audio.cc: Replaced the pseudo-breshenham audio interpolation code
	with 'proper' cubic interpolation code.

2002-07-27  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* monstinf.*: armur? armour! ;-)

2002-07-27  Jeff Freedman  <jeff@amy.nerble.net>

	* combat.cc: Call ready_ammo() if NPC needs it.

	* objs/barge.cc (Barge_object): Exit barge mode when you go into
	combat, and lower sails when you exit barge mode.

2002-07-26  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/intrinsics.cc,objs/flags.h,drag.cc:  In_dungeon flag.
	Also don't assume theft if inside a dungeon.
	* shapeinf.{cc,h},combat.cc,effects.cc:  Not_blocked flag for
	weapons and ammo.

2002-07-26  Aurelien Marchand <artaxerxes@users.sourceforge.net>
	* README.Qtopia: updated
	* imagewin/ibuf8.cc: added a test to prevent fast copy on the zaurus
	* configure.in: added test for $host_vendor under the linux clause
	* shapes/monstinf.*: renamed "arm" into "armur" as "arm" is reserved
	
2002-07-24  Dominik Reichardt  <dominus@users.sourceforge.net>
	* docs/xml/exult_studio.xml: updated
	* docs/exult_studio.html, exult_studio.txt: updated
	