@@ -27,11 +27,16 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 
 #include "iregobjs.h"
 
+const int NREAGENTS = 11;		// Total # reagents.
+
 /*
  *	A spellbook:
  */
 class Spellbook_object : public Ireg_game_object
 	{
+					// Reagents needed for each spell:
+	static unsigned short bg_reagents[9*8], si_reagents[9*8];
+	unsigned short *reagents;	// ->appropriate table.
 	unsigned char circles[9];	// Spell-present flags for each circle.
 	int bookmark;			// Spell # that bookmark is on, or -1.
 public:
@@ -41,11 +46,18 @@ public:
 		unsigned int shapey, unsigned int lft, unsigned char *c,
 		unsigned char bmark);
 	int add_spell(int spell);	// Add a spell.
+	bool has_ring(Actor *act);	// Has ring-o-reagents?
+					// Can we do this spell?
+	bool can_do_spell(Actor *act, int spell);
+					// Do the spell.
+	bool do_spell(Actor *act, int spell, bool can_do = false);
+	static void execute_spell(Actor *act, int spell);
 					// Run usecode function.
 	virtual void activate(int event = 1);
 					// Write out to IREG file.
 	virtual void write_ireg(DataSource* out);
-				// Get size of IREG. Returns -1 if can't write to buffer
+				// Get size of IREG. 
+				// Returns -1 if can't write to buffer
 	virtual int get_ireg_size();
 	};
 
